nebula-logger/main/logger/objects/LogEntry__c/fields/DmlOperationErrors__c.field-meta.xml
<CustomField>
    <fullName>DmlOperationErrors__c</fullName>
    <label>DML Operation Errors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>