nebula-logger/main/logger/objects/LogEntry__c/fields/DmlOperationType__c.field-meta.xml
<CustomField>
    <fullName>DmlOperationType__c</fullName>
    <label>DML Operation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Database.DeleteResult</fullName>
            </value>
            <value>
                <fullName>Database.MergeResult</fullName>
            </value>
            <value>
                <fullName>Database.SaveResult</fullName>
            </value>
            <value>
                <fullName>Database.UpsertResult.Insert</fullName>
            </value>
            <value>
                <fullName>Database.UpsertResult.Update</fullName>
            </value>
            <value>
                <fullName>Database.UndeleteResult</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>