nebula-logger/main/logger/objects/LogEntry__c/fields/HasDmlOperationType__c.field-meta.xml
<CustomField>
    <fullName>HasDmlOperationType__c</fullName>
    <formula>TEXT(DmlOperationType__c) != null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has DML Operation Type</label>
    <type>Checkbox</type>
</CustomField>