nebula-logger/main/logger/objects/LogEntry__c/fields/HasDmlResult__c.field-meta.xml
<CustomField>
    <fullName>HasDmlResult__c</fullName>
    <formula>TEXT(DmlResultType__c) != null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has DML Result Type</label>
    <type>Checkbox</type>
</CustomField>